--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -33,4 +33,4 @@
           run: |
             # 运行 Ruff 检查 rabbitmq_demo 目录下的代码
             # --output-format=github 会让错误在 Pull Request 中更好地显示
-            ruff check rabbitmq_demo/ --output-format=github
+            ruff check . --output-format=github
