fix: 修复cd.yml仓库名大写问题

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,6 +9,8 @@ jobs:
   build-and-push:
     name: 构建并推送 Docker 镜像
     runs-on: ubuntu-latest
+    outputs: # 定义此 job 的输出
+      docker_tag: ${{ steps.prep.outputs.docker_tag }} # 输出小写的 docker 标签
 
     permissions:
       contents: read
@@ -17,6 +19,13 @@ jobs:
     steps:
       - name: 检出代码
         uses: actions/checkout@v4
+
+      - name: 准备 Docker 标签 (强制小写)
+        id: prep # 给这个步骤一个 ID，方便后面引用输出
+        run: |
+          REPO=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          TAG="ghcr.io/${REPO}:latest"
+          echo "docker_tag=${TAG}" >> $GITHUB_OUTPUT # 设置步骤输出
 
       - name: 登录到 GitHub Container Registry
         uses: docker/login-action@v3
@@ -34,14 +43,14 @@ jobs:
           context: . # 构建上下文是仓库根目录
           file: ./Dockerfile # Dockerfile 在仓库根目录
           push: true
-          # 修正缩进，并使用标准格式 ghcr.io/用户名/仓库名:latest
-          tags: ghcr.io/${{ github.repository }}:latest
+          # 使用上一步生成的小写标签
+          tags: ${{ steps.prep.outputs.docker_tag }}
           cache-from: type=gha # 启用 GitHub Actions 构建缓存
           cache-to: type=gha,mode=max
 
   deploy:
     name: 部署到服务器
-    needs: build-and-push
+    needs: build-and-push # 依赖上一个 job 完成
     runs-on: ubuntu-latest
 
     steps:
@@ -56,8 +65,8 @@ jobs:
             # 如果 GITHUB_TOKEN 权限足够，可能不需要 CR_PAT
             # echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-            # 定义镜像名称 (与 build job 中的 tags 一致)
-            IMAGE_NAME="ghcr.io/${{ github.repository }}:latest"
+            # 定义镜像名称 (使用来自 build job 的输出)
+            IMAGE_NAME="${{ needs.build-and-push.outputs.docker_tag }}"
             CONTAINER_NAME="rabbitmq_demo_app" # 给你的应用容器起个名字
 
             # 拉取最新镜像
